--- a/TPTlen/Informe/informe.tex
+++ b/TPTlen/Informe/informe.tex
@@ -87,23 +87,23 @@
 \input{lagramatica}
 
 
-\newpage
+%\newpage
 
 \input{descripcionsol} 
 
-\newpage
+%\newpage
 
 \input{comocorrer}
 
-\newpage
+%\newpage
 
 \input{casosdeprueba}
 
-\newpage
+%\newpage
 
-\input{resultados}
+%\input{resultados}
 
-\newpage
+%\newpage
 
 \input{conclusiones}
 
